fix: disable hover css on mobile devices

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -48,3 +48,9 @@
     opacity: 0;
   }
 }
+
+@media(hover: hover) and (pointer: fine) {
+  .hv-base {
+    @apply hover:bg-base-100;
+  }
+}
